wwwroot/css/site.css
html {
	font-size: 14px;
}

@media (min-width: 768px) {
	html {
		font-size: 16px;
	}
}

.btn:focus,
.btn:active:focus,
.btn-link.nav-link:focus,
.form-control:focus,
.form-check-input:focus {
	box-shadow:
		0 0 0 0.1rem white,
		0 0 0 0.25rem #258cfb;
}

html {
	position: relative;
	min-height: 100%;
}

body {
	margin-bottom: 60px;
	background-color: #000;
}

.form-floating > .form-control-plaintext::placeholder,
.form-floating > .form-control::placeholder {
	color: var(--bs-secondary-color);
	text-align: end;
}

.form-floating > .form-control-plaintext:focus::placeholder,
.form-floating > .form-control:focus::placeholder {
	text-align: start;
}

section {
	scroll-margin-top: 90px;
}

.profile-sidebar .nav-link {
	padding: 12px 20px;
	font-size: 0.95rem;
}

.profile-sidebar .nav-link:hover {
    background-color: rgba(255,255,255,0.1);
}


.trainer-card {
    position: relative;
    border-radius: 20px;
    overflow: hidden;
    height: 420px;
    background: #111;
}

.trainer-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.trainer-overlay {
    position: absolute;
    inset: 0;
    background: linear-gradient(
        to top,
        rgba(0,0,0,0.85),
        rgba(0,0,0,0.2)
    );
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding: 20px;
    transition: 0.3s ease;
}

.trainer-card:hover .trainer-overlay {
    background: linear-gradient(
        to top,
        rgba(0,0,0,0.95),
        rgba(0,0,0,0.35)
    );
}

